########################################################################
# Build stuff
########################################################################
cmake_minimum_required(VERSION 2.8.7)
project(learnsoapy C)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
find_package(LibSDRplay)

if (NOT LIBSDRPLAY_FOUND)
    message(FATAL_ERROR "SDRPlay development files not found...")
endif ()
message(STATUS "LIBSDRPLAY_INCLUDE_DIRS - ${LIBSDRPLAY_INCLUDE_DIRS}")
message(STATUS "LIBSDRPLAY_LIBRARIES - ${LIBSDRPLAY_LIBRARIES}")

add_executable(soppy soppy.c)
target_link_libraries(soppy ${LIBSDRPLAY_LIBRARIES})
